# RenderingProject

./: CMakeLists.txt  README.md  main.cpp  maths.cpp  maths.h  renderer.cpp  renderer.h  scenes.cpp  scenes.h
